# resume-tailor

./: pyproject.toml  settings.json
resume_tailor/: recommendations.py
resume_tailor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_recommendations.py
